split up definition and implementation for utils

--- a/franka_interface/CMakeLists.txt
+++ b/franka_interface/CMakeLists.txt
@@ -36,7 +36,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
  INCLUDE_DIRS include
- LIBRARIES franka_interface franka_interface_exceptions
+ LIBRARIES franka_interface franka_interface_exceptions franka_interface_utils
  CATKIN_DEPENDS franka_gripper geometry_msgs moveit_core moveit_msgs moveit_ros_planning_interface moveit_visual_tools roscpp rviz_visual_tools tf2 tf2_ros
  DEPENDS
 )
@@ -61,6 +61,10 @@ add_library(${PROJECT_NAME}_exceptions
   src/${PROJECT_NAME}/exceptions.cpp
 )
 
+add_library(${PROJECT_NAME}_utils
+  src/${PROJECT_NAME}/utils.cpp
+)
+
 # Add cmake target dependencies of the library
 # as an example, code may need to be generated before libraries
 # either from message generation or dynamic reconfigure
@@ -72,6 +76,10 @@ target_link_libraries(${PROJECT_NAME}
 )
 
 target_link_libraries(${PROJECT_NAME}_exceptions
+  ${catkin_LIBRARIES}
+)
+
+target_link_libraries(${PROJECT_NAME}_utils
   ${catkin_LIBRARIES}
 )
 
