--- a/franka_interface/package.xml
+++ b/franka_interface/package.xml
@@ -11,7 +11,7 @@
 
   <!-- <url type="website">http://wiki.ros.org/franka_interface</url> -->
 
-  <!-- <doc_depend>doxygen</doc_depend> -->
+  <doc_depend>doxygen</doc_depend>
 
   <buildtool_depend>catkin</buildtool_depend>
   <depend>franka_gripper</depend>
@@ -27,7 +27,6 @@
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
+    <rosdoc config="doc/rosdoc.yaml" />
   </export>
 </package>
