added additional tests

--- a/franka_test_pkg/CMakeLists.txt
+++ b/franka_test_pkg/CMakeLists.txt
@@ -33,6 +33,8 @@ add_executable(gripper_example_node src/franka_gripper_example_node.cpp)
 add_executable(desk_height_test_node src/franka_desk_height_test.cpp)
 add_executable(camera_test src/camera_test.cpp)
 add_executable(collision_example_node src/collision_example_node.cpp)
+add_executable(grab_object src/franka_grab_obect_example.cpp)
+add_executable(lin_test src/franka_lin_test.cpp)
 
 target_link_libraries(arm_example_node
   ${catkin_LIBRARIES}
@@ -47,5 +49,11 @@ target_link_libraries(camera_test
   ${catkin_LIBRARIES}
 )
 target_link_libraries(collision_example_node
+  ${catkin_LIBRARIES}
+)
+target_link_libraries(grab_object
+  ${catkin_LIBRARIES}
+)
+target_link_libraries(lin_test
   ${catkin_LIBRARIES}
 )
